# nonebot

./: README.md
QAQ-bot/: .env.prod  README.md  bot.py  bot1.py  config.py  herb_monitor.py  pyproject.toml
QAQ-bot/QAQ_bot/plugins/herb_monitor/: __init__.py  herb_monitor.py
QAQ-bot/QAQ_bot/plugins/weather/: __init__.py
