[project]
name = "QAQ-bot"
version = "0.1.0"
description = "QAQ-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "QQ", module_name = "nonebot.adapters.qq" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = []
plugin_dirs = []
builtin_plugins = []
